--- a/views/content_layout.html
+++ b/views/content_layout.html
@@ -151,7 +151,7 @@
     <td>{{name}}</td>
     <td>{{status}}</td>
     <td>{{publish}}</td>
-    <td>{{viewer}}</td>
+    <td>{{-viewer}}</td>
     <td>{{editby}}</td>
     <td>{{editat}}</td>
     <td>
@@ -168,7 +168,7 @@
   <tr>
     <td>{{index}}</td>
     <td>{{name}}</td>
-    <td>{{viewer}}</td>
+    <td>{{-viewer}}</td>
     <td>{{range}}</td>
     <td>{{editby}}</td>
     <td>{{editat}}</td>
@@ -185,7 +185,7 @@
     <td>{{index}}</td>
     <td>{{name}}</td>
     <td>{{confirmby}}</td>
-    <td>{{viewer}}</td>
+    <td>{{-viewer}}</td>
     <td>{{range}}</td>
     <td>{{editat}}</td>
     <td>
@@ -198,7 +198,7 @@
   <tr>
     <td>{{index}}</td>
     <td>{{name}}</td>
-    <td>{{viewer}}</td>
+    <td>{{-viewer}}</td>
     <td>{{range}}</td>
     <td>{{editby}}</td>
     <td>{{applyat}}</td>
