--- a/views/customer_device_list.html
+++ b/views/customer_device_list.html
@@ -63,7 +63,7 @@
   <div>
     <table class="table table-hover" style="margin-bottom: 0px">
       <tbody>
-        {{devinfo}}
+        {{-devinfo}}
       </tbody>
     </table>
   </div>
@@ -81,7 +81,7 @@
       </tr>
       </thead>
       <tbody>
-        {{userinfo}}
+        {{-userinfo}}
       </tbody>
     </table>
   </div>
