--- a/views/customer_notice.html
+++ b/views/customer_notice.html
@@ -77,7 +77,7 @@
 <script type="text/template" id="tmpl_notice_list">
     <tr>
         <td>{{index}}</td>
-        <td>{{sendto}}</td>
+        <td>{{-sendto}}</td>
         <td>{{title}}</td>
         <td>{{notice}}</td>
         <td>{{createby}}</td>
