--- a/views/content_layout_add.html
+++ b/views/content_layout_add.html
@@ -491,7 +491,7 @@
     <td>{{index}}</td>
     <td>
       <a href="#">
-        <img src="{{coverSrc}}" width="50px" height="50px" operation="preview">
+        <img src="{{-coverSrc}}" width="50px" height="50px" operation="preview">
       </a>
     </td>
     <td>{{name}}</td>
